2009-03-10  Reinhard Max  <max@suse.de>

	* tkchat.tcl (::tkchat::DoAnim): Only animate GIF images.

2009-03-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: [FR 2605849] Explicitly set the application name.

2009-03-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: For tinyurl links add a tooltip that shows the
	              redirection target url.

2009-02-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Changed the tkchat icon to an SVG based image
	* tkchat.svg:
	* tkchat.png:

2009-02-25  Joe Mistachkin  <joe@mistachkin.com>

	* tkchat.tcl: Make "tkchatrc.tcl" handling work on Windows (support
	loading of the file with or without the leading period).

2009-01-14  Reinhard Max  <max@suse.de>

	* tkchat.tcl: Simplify ::tkchat::GoogleSelection and fix the
	bindings that call it. It now also works for selections in windows
	outside of tkchat.

2008-12-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Some fixes for vista look.

2008-11-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added option to show whispered (xmpp normal)
	messages inline in the chat as was done before 1.442

2008-11-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat_whiteboard.tcl: Work around Vista problem displaying
	safe-tk toplevel windows embedded directly into another toplevel
	by embedding in a frame instead.

2008-10-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:       Catch dodgy errors from the TIP website.
	* tkchat_mms.tcl:   Committed ammendments from the conference
	* tkchat_mjpeg.tcl: for the streaming plugins.

2008-10-27  Elchonon Edelson <eee@users.sourceforge.net>

	* tkchat.tcl:       Corrected the regexp that extracts the word to
	                    look up on Wiktionary when using "/wikid <word>"

2008-10-23  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat_mms.tcl:   Added restarting and auto-restart of stopped